fixed collapsal pictures

--- a/onlineR/css/jacob.css
+++ b/onlineR/css/jacob.css
@@ -1,4 +1,4 @@
-img.img-responsive{width:300px; height:200px;}
+img.img-responsive{width:100%; height:200px;}
 #bcca{color:blue;}
 #me{width:auto; height:1;}
 #jsp{color:blue;}
@@ -6,3 +6,4 @@ header{background-image: url("../img/portfolio/water_valley.jpg");
 background-repeat: no-repeat;
 background-position: center;
 background-color: transparent;}
+.portfolio-modal .modal-content img{width: inherit;}
